Update and rename style.css to style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,10 @@
+---
+---
+
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
