--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <header>
-    <h1><a href="/">Community Website</a></h1>
+    <h1>
+        <a href="/"><img src="assets/css/MSLearn_SA_badge_generic_rgb_300ppi.png" alt="Community Logo" style="height:50px;"> </a> 
+        Community Website
+    </h1>
     <nav>
         <ul>
             <li><a href="/about/">About</a></li>
