--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1>
         <a href="/"><img src="../assets/css/MSLearn_SA_badge_generic_rgb_300ppi.png" alt="Community Logo" style="height:50px;"> </a> 
-        Community Website
+        Microsoft Learn Student Ambassadors Community (MLSA) OAU
     </h1>
     <nav>
         <ul>
